--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,45 @@
 .container {
-  display: flex; /* divleri yan yana hizaladık */
+  display: flex; /* flexbox divleri yan yana hizaladık */
 }
 .box {
   width: 50%; /* divleri eşit genişlikte yapmak için yarı yarıya bölfük */
-  margin-left: 5px; /* soldan 5px boşluk bıraktık */
-  margin-right: 5px; /* sağdan 5px boşluk bıraktık */
-  height: 600px; /* yükseklik verdik */
   text-align: center; /* içerikleri ortaladık */
   border-radius: 15px; /* köşeleri yuvarladık */
-  background-color: #96d5ffbb; /* arkaplan rengi verdik */
+  display: flex;
+  flex-direction: column; /* İçerikleri dikeyde hizala */
+  justify-content: center; /* Dikeyde ortalama yap */
+  align-items: center; /* Yatayda ortalama yap */
+  height: 100vh; /* Sayfa yüksekliği kadar genişlik */
+  margin-left: 2px; /* soldan boşluk bıraktık*/
 }
 .box:hover {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7); /* divlerin üzerine gelince gölge veren kod */
 }
+
+.left{
+  margin-left: 5px; /* soldan 5px boşluk bıraktık */
+}
+
+.right{
+  margin-right: 5px; /* sağdan 5px boşluk bıraktık */
+}
+
 .left .right {
   background-color: #300808; /* sağ - sol divlerin varsayılan rengi */
 }
+
 .left:hover {
   background-color: #54abfc; /* sol divin üzerine gelince oluşacak renk */
 }
+
 .right:hover {
   background-color: #54abfc; /* sağ divin üzerine gelince oluşacak renk */
 }
+
 a{
     text-decoration: none; /* a etiketi için alt çizgiyi kaldırdık */
 }
+
 img {
   padding-top: 5px; /* üstten böşluk bıraktık */
   width: 500px; /* genişlik değeri verdik */
@@ -67,17 +82,3 @@ img {
   }
 }
 
-@media (min-width: 1025px) {
-  .box {
-    display: flex;
-    flex-direction: column; /* İçerikleri dikeyde hizala */
-    justify-content: center; /* Dikeyde ortalama yap */
-    align-items: center; /* Yatayda ortalama yap */
-    height: 100vh; /* Sayfa yüksekliği kadar genişlik */
-    margin: 2px; /* boşluk bırak*/
-  }
-  img {
-    width: 500px;
-    height: 450px;
-  }
-}
